@@ -4,7 +4,8 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
-- Fixes _relativePath handler
+- _relativePath handler can now walk through the site structure (not only upwards)
+  _path handler respects absolute paths without leading nav_root path
   [petschki]
 
 
